--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,12 @@
             <version>3.8.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.5</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
